[package]
name = "rust_bot_framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.11.5", features = ["framework", "standard_framework", "rustls_backend", "model", "client", "gateway"] }
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
